--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "dist/",
   "projectname": "lianxi",
   "description": "lianlian",
-  "appid": "wx7f332953f2e118cd",
+  "appid": "wx26a68c3c25a4a2f1",
   "setting": {
     "urlCheck": true,
     "es6": false,
