--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/eslint-parser": "^7.16.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/cli": "3.6.22",
     "@tarojs/taro-loader": "3.6.22",
@@ -74,11 +75,14 @@
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.6.22",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
     "ts-node": "^10.9.1",
